<resources>
    <string name="app_name">Barry’s Burritos</string>


    <string name="custom_burrito">Custom Burrito</string>
    <string name="cartTitle">Cart</string>
    <string name="totalDefaltValue">Total: £0:00</string>
    <string name="checkoutButtonText">Checkout</string>
    <string name="add_favorite_button">Add Favorite</string>
    <string name="custom_burrito_title">Custom Burrito</string>
    <string name="protein_choice">Protein Choice</string>
    <string name="steak">Steak</string>
    <string name="pulled_pork">Pulled pork</string>
    <string name="grilled_chicken">Grilled chicken</string>
    <string name="plant_based_soya_mince">Plant based soya mince</string>
    <string name="rice">Rice</string>
    <string name="white">White</string>
    <string name="brown">Brown</string>
    <string name="no_rice">No rice</string>
    <string name="beans">Beans</string>
    <string name="black">Black</string>
    <string name="pinto">Pinto</string>
    <string name="no_beans">No beans</string>
    <string name="extras">Extras</string>
    <string name="guacamole">Guacamole</string>
    <string name="sour_cream">Sour cream</string>
    <string name="cheese">Cheese</string>
    <string name="salsa">Salsa</string>
    <string name="size">size</string>
    <string name="medium">Medium</string>
    <string name="large">Large</string>
    <string name="quantity">Quantity</string>
    <string name="_1">1</string>
    <string name="name_your_burrito">Name your burrito</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="price">Price</string>
    <string name="barry_s_burritos">Barry\'s Burritos</string>
    <string name="think_burrito">Think Burrito?</string>
    <string name="think_barry">Think Barry</string>
    <string name="menu">Menu</string>
    <string name="add_more_to_cart">add more to cart</string>
    <string name="lessen_amount_of_item_in_cart">lessen amount of item in cart</string>
    <string name="remove_from_cart">remove from cart</string>
    <string name="add_as_favourite">Add as favourite</string>
    <string name="increase_ammount_to_add">increase amount to add</string>
    <string name="decrease_ammount_in_cart">decrease amount in cart</string>
    <string name="image_of_a_burrito">image of a burrito</string>
    <string name="banner_image_of_burritos">banner image of burritos</string>
    <string name="last_order">Last Order</string>
    <string name="welcome_to_barry_s_burritos_where_every_bite_tells_a_story_of_flavor_and_freshness_at_barry_s_we_re_passionate_about_crafting_the_perfect_burrito_experience_for_our_customers_from_the_moment_you_step_into_our_cozy_corner_eatery_you_re_enveloped_in_the_enticing_aroma_of_sizzling_meats_savory_spices_and_fresh_ingredients">Welcome to Barry\'s Burritos, where every bite tells a story of flavor and freshness! At Barry\'s, we\'re passionate about crafting the perfect burrito experience for our customers. From the moment you step into our cozy corner eatery, you\'re enveloped in the enticing aroma of sizzling meats, savory spices, and fresh ingredients.</string>
    <string name="our_journey_begins_bright_and_early_each_morning_as_our_culinary_wizards_swing_into_action_preparing_a_tantalizing_array_of_fillings_and_toppings_from_succulent_grilled_chicken_to_mouthwatering_carne_asada_each_protein_is_marinated_to_perfection_ensuring_a_burst_of_flavor_in_every_bite_meanwhile_our_vibrant_selection_of_veggies_crisp_lettuce_juicy_tomatoes_creamy_avocado_and_more_adds_a_refreshing_crunch_and_a_burst_of_color_to_every_burrito">Our journey begins bright and early each morning as our culinary wizards swing into action, preparing a tantalizing array of fillings and toppings. From succulent grilled chicken to mouthwatering carne asada, each protein is marinated to perfection, ensuring a burst of flavor in every bite. Meanwhile, our vibrant selection of veggies — crisp lettuce, juicy tomatoes, creamy avocado, and more — adds a refreshing crunch and a burst of color to every burrito.</string>
    <string name="but_what_truly_sets_barry_s_burritos_apart_is_our_commitment_to_quality_and_innovation_behind_the_scenes_our_chefs_are_constantly_experimenting_with_new_flavors_and_techniques_to_keep_our_menu_fresh_and_exciting_whether_it_s_our_signature_chipotle_aioli_or_our_zesty_mango_salsa_each_condiment_is_carefully_crafted_to_complement_the_natural_flavors_of_our_ingredients_taking_your_taste_buds_on_a_journey_they_won_t_soon_forget">But what truly sets Barry\'s Burritos apart is our commitment to quality and innovation. Behind the scenes, our chefs are constantly experimenting with new flavors and techniques to keep our menu fresh and exciting. Whether it\'s our signature chipotle aioli or our zesty mango salsa, each condiment is carefully crafted to complement the natural flavors of our ingredients, taking your taste buds on a journey they won\'t soon forget.</string>
    <string name="so_whether_you_re_a_burrito_aficionado_or_a_first_time_visitor_we_invite_you_to_join_us_on_a_culinary_adventure_at_barry_s_burritos_our_friendly_staff_is_here_to_guide_you_through_our_menu_and_help_you_craft_the_perfect_burrito_to_satisfy_your_cravings_and_with_our_cozy_atmosphere_and_welcoming_vibe_you_ll_feel_right_at_home_from_the_moment_you_walk_through_our_doors_we_can_t_wait_to_share_our_passion_for_burritos_with_you_come_visit_us_today_and_experience_the_magic_of_barry_s">So whether you\'re a burrito aficionado or a first-time visitor, we invite you to join us on a culinary adventure at Barry\'s Burritos. Our friendly staff is here to guide you through our menu and help you craft the perfect burrito to satisfy your cravings. And with our cozy atmosphere and welcoming vibe, you\'ll feel right at home from the moment you walk through our doors. We can\'t wait to share our passion for burritos with you — come visit us today and experience the magic of Barry\'s!</string>
    <string name="so_come_on_down_to_barry_s_burritos_today_and_experience_the_magic_for_yourself_one_bite_and_you_ll_understand_why_we_re_not_just_making_burritos_we_re_crafting_culinary_dreams_one_tortilla_at_a_time">So come on down to Barry\'s Burritos today and experience the magic for yourself. One bite, and you\'ll understand why we\'re not just making burritos — we\'re crafting culinary dreams, one tortilla at a time.</string>
    <string name="current_favorite">Current Favorite</string>
</resources>