<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/salsaTextView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <!-- Customize this layout based on your requirements for displaying CustomCartItem -->
    <!-- Example: -->

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/favoriteCustomButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:src="@drawable/baseline_favorite_24"
        app:layout_constraintBottom_toTopOf="@+id/customRemove"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/add_as_favourite" />

    <TextView
        android:id="@+id/customCartItemTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/custom_burrito"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/proteinTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/burritoNameTextView"
        tools:text="Protein" />

    <TextView
        android:id="@+id/riceTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="10dp"
        android:text="Rice"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/proteinTextView"
        tools:ignore="HardcodedText" />

    <TextView
        android:id="@+id/beansTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="10dp"
        android:text="Beans"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/riceTextView"
        tools:ignore="HardcodedText" />

    <TextView
        android:id="@+id/guacamoleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="10dp"

        android:text="@string/guacamole"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/beansTextView" />

    <TextView
        android:id="@+id/sourCreamTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="10dp"
        android:text="@string/sour_cream"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guacamoleTextView" />

    <TextView
        android:id="@+id/cheeseTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="10dp"
        android:text="@string/cheese"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sourCreamTextView" />

    <TextView
        android:id="@+id/x"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:text="x"
        app:layout_constraintEnd_toStartOf="@+id/customCartAdd"
        app:layout_constraintTop_toBottomOf="@+id/customCartItemTitle"
        tools:ignore="HardcodedText" />

    <TextView
        android:id="@+id/salsaTextViewCart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="10dp"
        android:text="@string/salsa"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cheeseTextView" />

    <TextView
        android:id="@+id/sizeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="10dp"
        android:text="Size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/salsaTextViewCart"
        tools:ignore="HardcodedText" />

    <TextView
        android:id="@+id/quantityTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="1"
        app:layout_constraintEnd_toStartOf="@+id/x"
        app:layout_constraintTop_toBottomOf="@+id/customCartItemTitle"
        tools:ignore="HardcodedText" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/customCartSubtract"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:clickable="true"
        android:src="@drawable/baseline_remove_24"
        app:fabCustomSize="25dp"
        app:layout_constraintEnd_toStartOf="@+id/quantityTextView"
        app:layout_constraintTop_toBottomOf="@+id/customCartItemTitle"
        android:contentDescription="@string/lessen_amount_of_item_in_cart" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/customCartAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:clickable="true"
        android:src="@android:drawable/ic_input_add"
        app:fabCustomSize="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/customCartItemTitle"
        android:contentDescription="@string/decrease_ammount_in_cart" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/customRemove"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        app:fabCustomSize="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/baseline_close_24"
        android:contentDescription="@string/remove_from_cart" />

    <TextView
        android:id="@+id/burritoNameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:text="Name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/customCartItemTitle"
        tools:ignore="HardcodedText" />

    <TextView
        android:id="@+id/customCartPriceTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Price"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/customRemove"
        tools:ignore="HardcodedText" />


</androidx.constraintlayout.widget.ConstraintLayout>